- Added a copy success modal instead of an alert - Fixed display of JSONTree so that it overflows in the y direction

--- a/gui-designer/bundle.css
+++ b/gui-designer/bundle.css
@@ -33,13 +33,35 @@
   right: 10px;
 }
 ._______________client_modules_toolbar_components_partlist_jsx-stylesheet-default {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  width: 100%;
   margin-top: 10px;
   border-top-width: 1px;
   border-top-style: solid;
   border-top-color: black;
   text-align: left;
+  overflow-y: scroll;
 }
 ._______________client_modules_toolbar_components_toolbar_jsx-stylesheet-default {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-align-content: stretch;
+      -ms-flex-line-pack: stretch;
+          align-content: stretch;
   position: absolute;
   top: -2px;
   right: -2px;
@@ -49,13 +71,16 @@
   border-width: 2px;
   border-color: black;
   border-style: solid;
-  text-align: center;
   z-index: 999999;
 }
 ._______________client_modules_toolbar_components_toolbar_jsx-stylesheet-toolbar_buttons {
   position: relative;
-  width: 80%;
+  width: 100%;
   margin-top: 10px;
+  text-align: center;
+}
+._______________client_modules_toolbar_components_toolbar_jsx-stylesheet-toolbar_button {
+  width: 80%;
 }
 ._______________client_configs_global-css_js-stylesheet-button {
   padding: 10px;
